<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:id="@+id/text_View_Challenge"
        style="@style/fontDefaultTitle"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/tertiary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_View_Challenge"
        android:textSize="20sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_Next_Challenge"
        style="@style/btnDefault"
        android:background="@drawable/button_gradient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_Next_Challenge"
        android:layout_marginTop="60dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_Home"
        style="@style/btnDefault"
        android:background="@drawable/button_back"
        android:drawableLeft="@drawable/ic_arrow"
        android:drawablePadding="-30dp"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:text="@string/button_Home"
        android:layout_marginTop="80dp"/>
</LinearLayout>
