<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:id="@+id/text_Label_About"
        style="@style/fontDefaultTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/text_Label_About"
        android:textAlignment="center"
        android:textColor="@color/tertiary"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/text_Resume"
        style="@style/fontDefault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_Resume"
        android:layout_marginTop="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:justificationMode="inter_word"
        android:textSize="16sp"
        android:textColor="@color/primary"
        android:typeface="normal" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_Home"
        style="@style/btnDefault"
        android:background="@drawable/button_back"
        android:drawableLeft="@drawable/ic_arrow"
        android:drawablePadding="-30dp"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:text="@string/button_Home"
        android:layout_marginTop="40dp"/>
</LinearLayout>
